@@ -1,4 +1,4 @@
-.TH MAKE-LIVE 8 "Mon,  4 Sep 2006" "0.99" "Debian Live framework"
+.TH MAKE-LIVE 1 "Mon,  4 Sep 2006" "0.99" "Debian Live framework"
 
 .SH NAME
 make-live \- utility to build Debian Live systems
