@@ -1,4 +1,4 @@
-.TH MAKE-LIVE.CONF 8 "Mon,  4 Sep 2006" "0.99" "Debian Live framework"
+.TH MAKE-LIVE.CONF 5 "Mon,  4 Sep 2006" "0.99" "Debian Live framework"
 
 .SH NAME
 make-live.conf \- configuration file for make-live(8)
