@@ -1,4 +1,4 @@
 # /usr/share/make-live/lists/minimal - package list for make-live(8)
 
 # Minimal
-eject nvi sudo
+eject vim-tiny sudo
